[package]
name = "amiga-starfield-generator"
version = "1.1.0"
edition = "2021"
authors = ["Nicolas BAUW <nbauw@hotmail.com>"]
description = "Amiga starfield generator"
keywords = ["amiga", "starfield", "sprite"]
categories = ["command-line-utilities", "graphics"]
repository = "https://github.com/nicolasbauw/amiga-starfield-generator"
readme = "README.md"
license = "MIT"

[dependencies]
rand = "0.8.5"
